--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ p {
 }
 
 .header {
-    border: 1px solid #ECECEC;
+    border-bottom: 1px solid #ECECEC;
 }
 
 .logo {
@@ -278,11 +278,14 @@ p {
     width: 100%;
     height: 100%;
     background-color:  rgba(0, 0, 0, 0.2);
+
+    transition: opacity 500ms var(--timing-function);
 }
 
 .backdrop.is-hidden {
     opacity: 0;
     pointer-events: none;
+    transition: opacity 500ms var(--timing-function);
 }
 
 .modal {
@@ -301,9 +304,8 @@ p {
 }
 
 .modal-button {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
+    position: absolute;
+    right: 0;
 
     cursor: pointer;
     width: 30px;
