--- a/css/styles.css
+++ b/css/styles.css
@@ -117,7 +117,7 @@ p {
     content: '';
 
     left: 0;
-    bottom: -1px;
+    bottom: -2px;
     
     width: 100%;
     height: 4px;
@@ -151,7 +151,7 @@ p {
 
     position: absolute;
     left: 0;
-    bottom: -1px;
+    bottom: -2px;
     
     width: 100%;
     height: 4px;
@@ -304,24 +304,34 @@ p {
 
 .modal-button {
     position: absolute;
-    right: 0;
+    right: 8px;
+    top: 8px;
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
     cursor: pointer;
     width: 30px;
     height: 30px;
+    padding: 1px 6px;
 
-    border: none;
-    margin-top: 8px;
-    margin-right: 8px;
-    padding: 0;
-
-    background-color: var(--main-white);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    fill: #000;
+    border-radius: 50%;
+    background: var(--main-white);
+    transition: fill 250ms var(--timing-function);
 }
+
+.modal-button:hover {
+    fill: var(--accent-color);
+}
+
 
 .icon-close {
-    width: 30px;
-    height: 30px;
+    width: 18px;
+    height: 18px;
 }
+
 
 /* Sub-banner */
 
