--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,19 @@ html {
     --main-white: #FFFFFF;
     --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
 
 body {
     font-family: 'Roboto', sans-serif;
@@ -203,7 +216,7 @@ p {
     color: var(--secondary-text-color);
 }
 
-/* Banner & Modal Window */
+/* Banner & Modal Window & User Form*/
 
 .overlay {
     margin: 0 auto;
@@ -332,6 +345,188 @@ p {
     height: 18px;
 }
 
+
+
+.form-title {
+    margin-top: 40px;
+    margin-bottom: 12px;
+
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+
+    color: var(--primary-text-color); 
+}
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    width: 448px;
+    margin: 0 auto;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    width: 448px;
+    margin: 0 auto;
+}
+
+.form-field {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+    width: 100%;
+    height: 58px;
+}
+
+.form-field.comment {
+    margin-bottom: 20px;
+    height: 138px;
+}
+
+.form-field-label {
+    margin-bottom: 4px;
+
+    font-size: 12px;
+    line-height: 1.15;
+    letter-spacing: 0.01em;
+
+    color: var(--secondary-text-color);
+}
+
+.input-container {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.form-field-input {
+    position: relative;
+    padding: 11px 11px 11px 40px;
+    height: 40px;
+
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    
+   
+    color: #757575;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+}
+
+.form-field-input:focus-visible {
+    border: none;
+    outline: 1px solid #2196F3;
+    transition: outline 250ms var(--timing-function);
+}
+
+.form-field-input.comment {
+    width: 448px;
+    padding: 12px 16px;
+    resize: none;
+}
+
+.icon-input {
+    position: absolute;
+    top: 27.5%;
+    left: 12px;
+
+    width: 18px;
+    height: 18px;
+
+    fill: #212121;
+    transition: fill 250ms var(--timing-function);
+}
+
+.form-field-input:focus-visible + .icon-input {
+    fill: #2196F3;
+}
+
+.form-field.policy {
+    display: flex;
+    flex-direction: row;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    height: 24px;
+}
+
+.checkbox-icon {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 16px;
+    height: 16px;
+    border-radius: 2px;
+    outline: 1.5px solid #212121;
+    outline-offset: -1.5px;
+    background-color: #FFFFFF;
+}
+
+.icon-agreement {
+    opacity: 0;
+}
+
+.checkbox-policy:checked + .checkbox-icon .icon-agreement {
+    opacity: 1;
+    fill: #FFFFFF;
+}
+
+
+.checkbox-policy:checked + .checkbox-icon {
+    outline-color: #2196F3;
+    background-color: #2196F3;
+}
+
+.form-agreement {
+    margin-left: 8px;
+    user-select: none;
+
+    font-size: 14px;
+    line-height: 1.70;
+    letter-spacing: 0.03em;
+
+    color: var(--secondary-text-color);
+}
+
+.policy-link {
+    color: var(--accent-color);
+}
+
+.form-btn {
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    margin-top: 30px;
+    
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.90;
+    letter-spacing: 0.06em;
+    width: 200px;
+    height: 50px;
+
+    background-color: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
+    color: var(--main-white);
+    transition: box-shadow 250ms var(--timing-function),
+    background-color 250ms var(--timing-function);
+}
+
+.form-btn:hover,
+.form-btn:focus {
+    background-color: #2195f3cb;
+}
 
 /* Sub-banner */
 
@@ -834,6 +1029,9 @@ color: var(--secondary-text-color);
     justify-content: center;
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 50%;
+
+    transition: fill 250ms var(--timing-function),
+    background-color 250ms var(--timing-function);
 }
 
 .join-contacts-link:hover {
@@ -845,4 +1043,92 @@ color: var(--secondary-text-color);
     height: 44px;
     padding: 12px;
     fill: #FFFFFF;
+}
+
+/* Distribution subscribe */
+
+.disctribution {
+    width: 570px;
+    height: 86px;
+
+    margin: 12px 0 0 93px;
+}
+
+.subscribe-us {
+    margin-bottom: 20px;
+
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.15;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+
+    color: var(--main-white);
+}
+
+.subscribe-container {
+    display: flex;
+}
+
+.subscribe-form {
+    display: flex;
+}
+
+.subscribe-email {
+    display: flex;
+    align-items: center;
+    margin-right: 12px;
+    padding-left: 16px;
+
+    width: 358px;
+    height: 50px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    background-color: transparent;
+    color: rgba(255, 255, 255, 0.6);
+    
+    transition: outline 250ms var(--timing-function);
+}
+
+.subscribe-email:focus-visible {
+    outline: 1px solid #2196F3;
+    border: none;
+}
+
+.subscribe-btn {
+    cursor: pointer;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    padding: 10px 28px;
+    
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.90;
+    letter-spacing: 0.06em;
+    width: 200px;
+    height: 50px;
+
+    background-color: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
+    color: var(--main-white);
+    transition: box-shadow 250ms var(--timing-function),
+    background-color 250ms var(--timing-function);
+}
+
+.subscribe-btn:hover,
+.subscribe-btn:focus {
+    background-color:#2195f3cb;
+}
+
+.icon-send {
+    margin-left: 10px;
 }
