--- a/css/main.css
+++ b/css/main.css
@@ -847,7 +847,7 @@ p {
 .regular-clients__list {
   display: flex;
 }
-.regular-clients__list:not(:last-child) {
+.regular-clients__item:not(:last-child) {
   margin-right: 30px;
 }
 
@@ -857,9 +857,11 @@ p {
   justify-content: center;
   width: 170px;
   height: 92px;
+ 
   border: 1px solid #AFB1B8;
   border-radius: 4px;
   color: #AFB1B8;
+  
   transition: color 250ms var(--timing-function);
 }
 .regular-clients__link:hover {
@@ -976,7 +978,8 @@ p {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms var(--timing-function);
 }
 
-.overlay-animated:hover .overlay-animated__container {
+.examples__link:hover .overlay-animated__container,
+.examples__link:focus .overlay-animated__container {
   transform: translateY(0%);
   opacity: 1;
 }
