--- a/sass/components/_our-clients.scss
+++ b/sass/components/_our-clients.scss
@@ -9,24 +9,25 @@
 
 .regular-clients__list {
     display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
-    &:not(:last-child) { 
-        margin-right: 30px;
-    }    
+.regular-clients__item:not(:last-child) {
+    margin-right: 30px;
 }
 
 .regular-clients__link {
     display: flex;
     align-items: center;
     justify-content: center;
-    
+
     width: 170px;
     height: 92px;
-
+ 
     border: 1px solid #AFB1B8;
     border-radius: 4px;
     color: #AFB1B8;
-
     transition: color 250ms var(--timing-function);
 
     &:hover {
