--- a/sass/components/_posters.scss
+++ b/sass/components/_posters.scss
@@ -61,10 +61,11 @@
 .overlay-animated__container {
     position: absolute;
     
-   bottom: 0;
-   right: 0;
+    bottom: 0;
+    right: 0;
     width: 100%;
     height: 100%;
+    
     display: flex;
     padding: 63px 24px;
     justify-content: center;
@@ -78,8 +79,8 @@
     opacity 250ms var(--timing-function);
 }
 
-.overlay-animated:hover 
-.overlay-animated__container {
+.examples__link:hover .overlay-animated__container,
+.examples__link:focus .overlay-animated__container  {
     transform: translateY(0%);
     opacity: 1;
 }
